--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ ul {
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  gap: 4px;
+  
 }
 
 .sidebar {
@@ -34,12 +34,25 @@ ul {
   grid-row: 2/3;
   grid-template-columns: 3fr 1fr;
 }
+.sidetext{
+  text-align: center;
+  margin: 10px;
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 
 .article,
-.sideContent {
+.sideContent
+.announcement
+.trending {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 15px;
+  padding: 10px;
+  
+}
+.trending{
+  margin-top: 20px;
 }
 
 .article .card,
@@ -50,16 +63,17 @@ ul {
   font-family: sans-serif;
   color: white;
   text-align: left;
+  box-shadow: 0 0 6px 2px #0284c7;
+  background-color: white;
 }
 
-.card p {
-  padding: 5px;
-}
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
+  
 }
 
 .card .title {
@@ -68,43 +82,120 @@ ul {
 }
 .sideContent {
   grid-column: 2/3;
-  border:1px #f87171 solid;
+  margin: 20px;
+  padding: 10px;
 }
 .sidebarSettingSection,
-.sidebarUserSection{
-    margin-top: 2rem;
+.sidebarUserSection {
+  margin-top: 3rem;
+  padding: 10px;
+  
+}
+.sidebarList{
+  display: flex;
+  gap: 1.1rem;
+  align-items: center;
+  -webkit-box-align: center;
+  color: white;
+  margin-top: 15px;
 }
 .wrapper {
-    position: relative;
-    display: flex;
-    min-width: 100px;
-  }
-  .search-icon {
-    position: absolute;
-    top: 6px;
-    left: 8px;
-    width: 14px;
-  }
+  position: relative;
+  display: flex;
+  min-width: 100px;
+}
+.search-icon {
+  position: absolute;
+  top: 6px;
+  left: 8px;
+  width: 14px;
+}
 
-  .clear-icon {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 10px;
-    cursor: pointer;
-    <!-- visibility: hidden; -->
-  }
-  .search {
-    border: 1px solid grey;
-    border-radius: 5px;
-    height: 20px;
-    width: 100%;
-    padding: 2px 23px 2px 30px;
-    outline: 0;
-    background-color: #f5f5f5;
-  }
+.clear-icon {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 10px;
+  cursor: pointer;
+  visibility: hidden;
+}
+.search {
+  border: 1px solid #dbeafe;
+  border-radius: 5px;
+  height: 20px;
+  padding: 2px 23px 2px 30px;
+  outline: 0;
+  width: 600px;
+  background-color: #dbeafe;
+}
 
-  .search:hover, .search:focus {
-    border: 1.5px solid #009688;
-    background-color: white;
-  }
+.search:hover,
+.search:focus {
+  border: 1.5px solid #009688;
+  background-color: white;
+}
+.headerSubSection {
+  display: flex;
+}
+
+.searchLogo {
+  display: flex;
+  justify-content: flex-start;
+  margin-right: 50px;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+.sectionMenu {
+  display: grid;
+  margin-top: 20px;
+  margin-left: auto;
+}
+.lists1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+  margin-right: 1rem;
+}
+.headerSectionMenuLogo{
+  margin-right: 20px;
+}
+.headerSectionSubMenu {
+  display: grid;
+  align-items: flex-end;
+  
+}
+
+.headerSectionSubMenu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+  padding: 15px;
+}
+.headerSectionSubMenuList {
+  
+  height: 25px;
+  text-align: center;
+  border: 1px solid #0284c7;
+  border-radius: 20px;
+  padding: 12px 23px 2px 30px;
+  outline: 0;
+  width: 100px;
+  background-color: #0284c7;
+  margin-right: 20px;
+  color: white;
+}
+
+.headerSectionMenu {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  
+}
+.headerSectionMenuLogo {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  justify-content: flex-start;
+  padding: 15px;
+}
+.usernamesection{
+  margin-left: -20px;
+}
